feat: Add FlagConfigStep and InteractiveConfigStep components with associated styles and tests
- Implemented FlagConfigStepComponent for managing flag configurations.
- Created InteractiveConfigStepComponent for handling interactive configuration questions.
- Added HTML templates and SCSS styles for both components.
- Developed unit tests for FlagConfigStepComponent and RemoteConfigStepComponent.
- Integrated reactive forms and material design components for enhanced UI/UX.
- Established filtering logic for remote types and dynamic form fields.
- Included loading states and validation for user inputs.

--- a/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
+++ b/src/app/features/modals/settings/rclone-config-modal/rclone-config-modal.component.html
@@ -9,15 +9,13 @@
     </button>
   </div>
 
-  <div class="persistent-search-container">
-    <app-search-container
-      [visible]="isSearchVisible"
-      [searchText]="searchQuery"
-      (searchTextChange)="onSearchInput($event)"
-      [placeholder]="getSearchPlaceholder()"
-      ariaLabel="Search RClone settings"
-    ></app-search-container>
-  </div>
+  <app-search-container
+    [visible]="isSearchVisible"
+    [searchText]="searchQuery"
+    (searchTextChange)="onSearchInput($event)"
+    [placeholder]="getSearchPlaceholder()"
+    ariaLabel="Search RClone settings"
+  ></app-search-container>
 
   @if (isLoading) {
     <div class="loading-overlay">
@@ -189,18 +187,29 @@
               <p>Try adjusting your search terms</p>
             </div>
           } @else {
-            <form [formGroup]="rcloneOptionsForm">
-              @for (
-                option of getRCloneOptionsForCurrentPage();
-                track trackByOptionName($index, option)
-              ) {
-                <app-setting-control
-                  [option]="option"
-                  [formControlName]="getUniqueControlKey(option)"
-                  (valueCommit)="saveRCloneOption(getUniqueControlKey(option))"
-                ></app-setting-control>
-              }
-            </form>
+            <!-- VIRTUAL SCROLL IMPLEMENTATION -->
+            <cdk-virtual-scroll-viewport
+              [itemSize]="20"
+              class="virtual-scroll-viewport"
+              [style.height.px]="'100%'"
+            >
+              <form [formGroup]="rcloneOptionsForm">
+                @for (
+                  option of getVirtualScrollData();
+                  track trackByOptionIndex($index, option);
+                  let i = $index
+                ) {
+                  <div class="virtual-scroll-item" [attr.data-index]="i">
+                    <app-setting-control
+                      [id]="'setting-' + option.Name"
+                      [option]="option"
+                      [formControlName]="getUniqueControlKey(option)"
+                      (valueCommit)="saveRCloneOption(getUniqueControlKey(option))"
+                    ></app-setting-control>
+                  </div>
+                }
+              </form>
+            </cdk-virtual-scroll-viewport>
           }
         }
       </div>
