--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -74,7 +74,7 @@
             box-shadow: 0 8px 24px rgba(var(--primary-color-rgb), 0.15);
           }
 
-          mat-icon {
+          img {
             width: 180px;
             height: 180px;
           }
