--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -828,6 +828,10 @@ button {
   width: 100%;
 }
 
+.cdk-virtual-scroll-content-wrapper {
+  max-width: 100%;
+}
+
 .mat-mdc-dialog-container .mdc-dialog__surface {
   background: var(--app-background) !important;
   color: var(--app-text-color) !important;
