--- a/src/app/shared/components/setting-control/setting-control.component.html
+++ b/src/app/shared/components/setting-control/setting-control.component.html
@@ -1,10 +1,23 @@
 <div class="settings-list">
   @if (control) {
     <ng-template #settingInfo let-opt>
-      <div class="setting-info">
-        <strong>{{ opt.FieldName || opt.Name }}</strong>
-        <p class="help-text" [innerHTML]="opt.Help | linebreaks"></p>
-        <small class="default-value">Default: {{ opt.DefaultStr }}</small>
+      <div class="setting">
+        <div class="setting-info">
+          <strong>{{ opt.FieldName || opt.Name }}</strong>
+          <p class="help-text" [innerHTML]="opt.Help | linebreaks"></p>
+          <small class="default-value">Default: {{ opt.DefaultStr }}</small>
+        </div>
+        @if (isValueChanged()) {
+          <button
+            mat-icon-button
+            class="reset-btn"
+            (click)="resetToDefault()"
+            matTooltip="Reset to default"
+            aria-label="Reset to default"
+          >
+            <mat-icon svgIcon="refresh"></mat-icon>
+          </button>
+        }
       </div>
     </ng-template>
     <ng-template
