--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -829,7 +829,7 @@ button {
 }
 
 .cdk-virtual-scroll-content-wrapper {
-  max-width: 100%;
+  max-width: 100% !important;
 }
 
 .mat-mdc-dialog-container .mdc-dialog__surface {
